# udemy_lab

./: README.md
api/: .gitignore  README.md  api_extractor.py  pyproject.toml
api/02_silver/: stg_activity_items.json  stg_categories.json  stg_course_progress.json  stg_languages.json  stg_levels.json  stg_students.json  stg_sub_categories.json
api/03_gold/: Alunos.csv  Atividades_Detalhadas.csv  Categorias.csv  Cursos.csv  Idiomas.csv  Niveis_Dificuldade.csv  Progresso_Cursos.csv  Subcategorias.csv  udemy_consolidated_report.xlsx
cursos/selenium-web-scraping-e-automacao/: .gitignore  aula00.ipynb  aula01.ipynb  aula02.ipynb  aula03.ipynb  aula04.ipynb  aula05.ipynb  aula06.ipynb  aula07.ipynb  aula08.ipynb  aula09.ipynb  aula10.ipynb  aula11.ipynb  aula12.ipynb  aula13.ipynb  aula14.ipynb  aula15.ipynb  aula16.ipynb  aula17.ipynb  aula18.ipynb  aula19.ipynb  aula_model copy.ipynb  aula_model.ipynb  auladesafio01.ipynb  auladesafio02.ipynb  auladesafio03.ipynb  aulamodel.ipynb  curso-notas.md  desafio_1.json  pyproject.toml  requirements.txt  server_up.py  usuarios.csv
docs/: luiz-otavio-miranda_cursos.xlsx  mateus_muller_devops_trilha.xlsx
