[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Edy Epumuceno Rodrigues Junior",email = "edyjrdev@gmail.com"}
]
requires-python = "3.13.3"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
