[project]
name = "selenium-web-scraping-e-automacao"
version = "0.1.0"
description = ""
authors = [
    {name = "Edy Epumuceno Rodrigues Junior",email = "edyjrdev@gmail.com"}
]
requires-python = "3.13.3"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
